--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,9 +53,9 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@v5.0.0
         with:
           args: |
-            -Dsonar.organization=${{ secrets.SONAR_ORG }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.sources=.
+            -Dsonar.organization=vote
+            -Dsonar.projectKey=project-2-vote
+            -Dsonar.sources=vote
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
