--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,10 +52,7 @@ jobs:
       - name: Run SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@v5.0.0
         with:
-          args: |
-            -Dsonar.organization=AhmmedTowfique
-            -Dsonar.projectKey=ahmmedtowfique
-            -Dsonar.sources=vote
+          args: .
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
