--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # SonarCloud project identifiers
 sonar.projectKey=ahmmedtowfique
 sonar.organization=AhmmedTowfique
-
+sonar.projectName=project-2
 # Only scan the Vote service
 sonar.sources=vote
 
@@ -10,3 +10,5 @@ sonar.exclusions=**/__pycache__/**,**/tests/**
 
 # Optional: project name
 sonar.projectName=Vote Service
+
+Downloading sonar-cfamily-plugin ana
