sonarcube bug solved

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,15 @@
 # SonarCloud project identifiers
-sonar.projectKey=ahmmedtowfique
-sonar.organization=AhmmedTowfique
-sonar.projectName=project-2
-# Only scan the Vote service
+sonar.projectKey=AhmmedTowfique_project-2
+sonar.organization=ahmmedtowfique
+
+# Source folder to scan
 sonar.sources=vote
 
-# Optional: exclude unnecessary files/folders
-sonar.exclusions=**/__pycache__/**,**/tests/**
-
-# Optional: project name
+# Optional project name
 sonar.projectName=Vote Service
 
-Downloading sonar-cfamily-plugin ana
+# Optional exclusions
+sonar.exclusions=**/__pycache__/**,**/tests/**
+
+# Optional: specify default branch
+sonar.branch.name=main
