--- a/vote/sonar-project.properties
+++ b/vote/sonar-project.properties
@@ -1,15 +1,9 @@
-# SonarCloud project identifiers
+# ------------------------------------
+# Vote Service
+# ------------------------------------
 sonar.projectKey=AhmmedTowfique_project-2
 sonar.organization=ahmmedtowfique
-
-# Source folder to scan
 sonar.sources=vote
-
-# Optional project name
 sonar.projectName=Vote Service
-
-# Optional exclusions
 sonar.exclusions=**/__pycache__/**,**/tests/**
-
-# Optional: specify default branch
 sonar.branch.name=main
