--- a/vote/sonar-project.properties
+++ b/vote/sonar-project.properties
@@ -1,9 +1,6 @@
-# ------------------------------------
-# Vote Service
-# ------------------------------------
-sonar.projectKey=AhmmedTowfique_project-2
+sonar.projectKey=ahmmedtowfique_result
 sonar.organization=ahmmedtowfique
-sonar.sources=vote
-sonar.projectName=Vote Service
-sonar.exclusions=**/__pycache__/**,**/tests/**
+sonar.sources=result
+sonar.projectName=Result Service
+sonar.exclusions=**/node_modules/**
 sonar.branch.name=main
