--- a/vote/sonar-project.properties
+++ b/vote/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=ahmmedtowfique_result
+sonar.projectKey=AhmmedTowfique_project-2
 sonar.organization=ahmmedtowfique
-sonar.sources=result
-sonar.projectName=Result Service
+sonar.sources=vote
+sonar.projectName=Vote Service
 sonar.exclusions=**/node_modules/**
 sonar.branch.name=main
